--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </button>
       <button onclick="setTheme(4)" class="flex w-12 h-12">
         <div class="rounded-s-full bg-[#3498db] w-12 h-12 flex justify-center items-center text-white">H</div>
-        <div class="rounded-r-full bg-[#e74c3c] w-12 h-12 flex justify-center items-center text-white">T</div>
+        <div class="rounded-r-full bg-[#720e9e] w-12 h-12 flex justify-center items-center text-white">T</div>
       </button>
       <button onclick="setTheme(5)" class="flex w-12 h-12">
         <div class="rounded-s-full bg-black w-12 h-12 flex justify-center items-center text-white">H</div>
